unpackaged/main/default/objects/Lead/fields/AnyWare_Term__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AnyWare Term</label>
    <referenceTo>Lease_Rates__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>