unpackaged/main/default/objects/Lead/fields/DSCORGPKG__Company_HQ_City__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Company_HQ_City__c</fullName>
    <label>Company HQ City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>