unpackaged/main/default/objects/Lead/fields/DSCORGPKG__Company_HQ_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Company_HQ_Country_Code__c</fullName>
    <label>Company HQ Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>