unpackaged/main/default/objects/Lead/fields/DSCORGPKG__Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Company_Phone__c</fullName>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>