unpackaged/main/default/objects/Lead/fields/DSCORGPKG__department__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__department__c</fullName>
    <label>DiscoverOrg Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>