unpackaged/main/default/objects/Lead/fields/DSCORGPKG__DO_3yr_Sales_Growth__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DO_3yr_Sales_Growth__c</fullName>
    <label>3yr Sales Growth %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>