unpackaged/main/default/objects/Lead/fields/DSCORGPKG__MiddleName__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__MiddleName__c</fullName>
    <label>MiddleName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>