unpackaged/main/default/objects/Lead/fields/DSCORGPKG__NAICS_Codes__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__NAICS_Codes__c</fullName>
    <label>Primary NAICS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>