unpackaged/main/default/objects/Lead/fields/DSCORGPKG__Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Other_Phone__c</fullName>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>