unpackaged/main/default/objects/Lead/fields/Email_body_plaintext__c.field-meta.xml
<CustomField>
    <fullName>Email_body_plaintext__c</fullName>
    <label>Email body (plaintext)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>