unpackaged/main/default/objects/Lead/fields/EmailBodyText__c.field-meta.xml
<CustomField>
    <fullName>EmailBodyText__c</fullName>
    <label>Email Body (html)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>