unpackaged/main/default/objects/Lead/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <length>64</length>
    <type>Text</type>
</CustomField>