unpackaged/main/default/objects/Lead/fields/Lead_Created_Past_24_hours__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Past_24_hours__c</fullName>
    <formula>IF ( NOW() - CreatedDate &lt; 2 ,"TRUE", "FALSE" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Past 24 hours</label>
    <type>Text</type>
</CustomField>