unpackaged/main/default/objects/Lead/fields/Lead_DateStamp__c.field-meta.xml
<CustomField>
    <fullName>Lead_DateStamp__c</fullName>
    <label>Lead DateStamp</label>
    <length>24</length>
    <type>Text</type>
</CustomField>