unpackaged/main/default/objects/Lead/fields/Lead_Source_Asset__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Asset__c</fullName>
    <label>Lead Source Asset</label>
    <length>128</length>
    <type>Text</type>
</CustomField>