unpackaged/main/default/objects/Lead/fields/Lead_Source_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Comments__c</fullName>
    <label>Lead Source Comments</label>
    <type>TextArea</type>
</CustomField>