unpackaged/main/default/objects/Lead/fields/Telephone_System_Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Telephone_System_Make_Model__c</fullName>
    <label>Telephone System Make/Model</label>
    <type>TextArea</type>
</CustomField>