unpackaged/main/default/objects/Lead/fields/Telephone_System_Users__c.field-meta.xml
<CustomField>
    <fullName>Telephone_System_Users__c</fullName>
    <label>Telephone System Users</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>