unpackaged/main/default/objects/Lead/fields/Telephone_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Vendor__c</fullName>
    <description>Current telephone manufacturer or vendor.</description>
    <label>Telephone Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8x8</fullName>
            </value>
            <value>
                <fullName>Avaya</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Comdial</fullName>
            </value>
            <value>
                <fullName>Fonality</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>Mitel</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>Nortel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shoretel</fullName>
            </value>
            <value>
                <fullName>Toshiba</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Vonage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>