unpackaged/main/default/objects/Lead/fields/Website_Activity_Counter__c.field-meta.xml
<CustomField>
    <fullName>Website_Activity_Counter__c</fullName>
    <label>Website Activity Counter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>