unpackaged/main/default/objects/Lead/fields/Website_ID__c.field-meta.xml
<CustomField>
    <fullName>Website_ID__c</fullName>
    <description>Used to identify the source leads coming from Website</description>
    <label>Website ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>