unpackaged/main/default/objects/Lead/listViews/Andrew_Bearden_Inactive_Lead.listView-meta.xml
<ListView>
    <fullName>Andrew_Bearden_Inactive_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Andrew Bearden Inactive</label>
    <queue>Andrew_Bearden_Inactive</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>