unpackaged/main/default/objects/Lead/listViews/Andrew_Bearden_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Andrew_Bearden_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Andrew Bearden Queue</label>
    <queue>Andrew_Bearden_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>