unpackaged/main/default/objects/Lead/listViews/Bobby_Ellitt_Owner.listView-meta.xml
<ListView>
    <fullName>Bobby_Ellitt_Owner</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>bobbye</value>
    </filters>
    <label>Bobby Ellitt Owner</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>