unpackaged/main/default/objects/Lead/listViews/Brian_Boyce.listView-meta.xml
<ListView>
    <fullName>Brian_Boyce</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>bboyc</value>
    </filters>
    <label>Brian Boyce Owner</label>
    <language>en_US</language>
</ListView>