unpackaged/main/default/objects/Lead/listViews/Brian_Boyce_Inactive_Lead.listView-meta.xml
<ListView>
    <fullName>Brian_Boyce_Inactive_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Brian Boyce Inactive</label>
    <queue>Brian_Boyce_Inactive</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>