unpackaged/main/default/objects/Lead/listViews/Brian_Boyce_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Brian_Boyce_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Brian Boyce Queue</label>
    <queue>Brian_Boyce_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>