unpackaged/main/default/objects/Lead/listViews/Chris_Newton_Inactive_Lead.listView-meta.xml
<ListView>
    <fullName>Chris_Newton_Inactive_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Chris Newton Inactive</label>
    <queue>Chris_Newton_Inactive</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>