unpackaged/main/default/objects/Lead/listViews/Chris_Newton_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Chris_Newton_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Chris Newton Queue</label>
    <queue>Chris_Newton_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>