unpackaged/main/default/objects/Lead/listViews/Dan_Hatton_Queue.listView-meta.xml
<ListView>
    <fullName>Dan_Hatton_Queue</fullName>
    <filterScope>Queue</filterScope>
    <label>Dan Hatton Queue</label>
    <queue>Dan_Hatton_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>