unpackaged/main/default/objects/Lead/listViews/David_Richard_Inactive_Lead.listView-meta.xml
<ListView>
    <fullName>David_Richard_Inactive_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>David Richard Inactive</label>
    <queue>David_Richard_Inactive</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>