unpackaged/main/default/objects/Lead/listViews/David_Richard_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>David_Richard_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>David Richard Queue</label>
    <queue>David_Richard_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>