unpackaged/main/default/objects/Lead/listViews/Email2Lead_Wheelhouse.listView-meta.xml
<ListView>
    <fullName>Email2Lead_Wheelhouse</fullName>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Wheelhouse</value>
    </filters>
    <label>Wheelhouse - Lead Source</label>
    <language>en_US</language>
</ListView>