unpackaged/main/default/objects/Lead/listViews/Ethan_Martin_Inactive_Lead.listView-meta.xml
<ListView>
    <fullName>Ethan_Martin_Inactive_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Ethan Martin Inactive</label>
    <queue>Ethan_Martin_Inactive</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>